--- a/Compilets/Examples/UsageWithMavenOrWithoutSbtPlugin/pom.xml
+++ b/Compilets/Examples/UsageWithMavenOrWithoutSbtPlugin/pom.xml
@@ -6,7 +6,7 @@
   <version>1.0-SNAPSHOT</version>
   
   <properties>
-    <scala.version>2.10.0-RC1</scala.version>
+    <scala.version>2.10.0</scala.version>
   </properties>
   
   <dependencies>
