Travis CI: sequential tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,7 @@ cache:
   directories:
   - $HOME/.m2
   - $HOME/.ivy2
+
+sbt_args:
+  - 'set javaOptions += "-Djunit.parallel.threads=1"'
+  - 'set parallelExecution in Test := false'
